xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__single_axis_step.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_xpath(\"child::a\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param(
                        Name(
                            "v0",
                        ),
                    ),
                    Param(
                        Name(
                            "v1",
                        ),
                    ),
                    Param(
                        Name(
                            "v2",
                        ),
                    ),
                ],
                body: Spanned {
                    value: FunctionCall(
                        FunctionCall {
                            atom: Spanned {
                                value: Const(
                                    Step(
                                        Step {
                                            axis: Child,
                                            node_test: NameTest(
                                                Name(
                                                    Name {
                                                        name: "a",
                                                        namespace: None,
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        0,
                                    ),
                                    length: SourceOffset(
                                        8,
                                    ),
                                },
                            },
                            args: [
                                Spanned {
                                    value: Variable(
                                        Name(
                                            "v0",
                                        ),
                                    ),
                                    span: SourceSpan {
                                        offset: SourceOffset(
                                            0,
                                        ),
                                        length: SourceOffset(
                                            0,
                                        ),
                                    },
                                },
                            ],
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            8,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                8,
            ),
        },
    },
)
