xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__static_function_call.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"my_function(5, 2)\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v0",
                ),
                var_expr: Spanned {
                    value: StaticFunctionReference(
                        StaticFunctionId(
                            0,
                        ),
                        None,
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            0,
                        ),
                    },
                },
                return_expr: Spanned {
                    value: FunctionCall(
                        FunctionCall {
                            atom: Spanned {
                                value: Variable(
                                    Name(
                                        "v0",
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        0,
                                    ),
                                    length: SourceOffset(
                                        0,
                                    ),
                                },
                            },
                            args: [
                                Spanned {
                                    value: Const(
                                        Integer(
                                            5,
                                        ),
                                    ),
                                    span: SourceSpan {
                                        offset: SourceOffset(
                                            12,
                                        ),
                                        length: SourceOffset(
                                            1,
                                        ),
                                    },
                                },
                                Spanned {
                                    value: Const(
                                        Integer(
                                            2,
                                        ),
                                    ),
                                    span: SourceSpan {
                                        offset: SourceOffset(
                                            15,
                                        ),
                                        length: SourceOffset(
                                            1,
                                        ),
                                    },
                                },
                            ],
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            17,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                17,
            ),
        },
    },
)
