xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__static_function_call3.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"my_function(1 + 2 + 3, 4 + 5)\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v0",
                ),
                var_expr: Spanned {
                    value: StaticFunctionReference(
                        StaticFunctionId(
                            0,
                        ),
                        None,
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            0,
                        ),
                    },
                },
                return_expr: Spanned {
                    value: Let(
                        Let {
                            name: Name(
                                "v3",
                            ),
                            var_expr: Spanned {
                                value: Binary(
                                    Binary {
                                        left: Spanned {
                                            value: Const(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    12,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        },
                                        op: Add,
                                        right: Spanned {
                                            value: Const(
                                                Integer(
                                                    2,
                                                ),
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    16,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        12,
                                    ),
                                    length: SourceOffset(
                                        6,
                                    ),
                                },
                            },
                            return_expr: Spanned {
                                value: Let(
                                    Let {
                                        name: Name(
                                            "v5",
                                        ),
                                        var_expr: Spanned {
                                            value: Binary(
                                                Binary {
                                                    left: Spanned {
                                                        value: Variable(
                                                            Name(
                                                                "v3",
                                                            ),
                                                        ),
                                                        span: SourceSpan {
                                                            offset: SourceOffset(
                                                                12,
                                                            ),
                                                            length: SourceOffset(
                                                                6,
                                                            ),
                                                        },
                                                    },
                                                    op: Add,
                                                    right: Spanned {
                                                        value: Const(
                                                            Integer(
                                                                3,
                                                            ),
                                                        ),
                                                        span: SourceSpan {
                                                            offset: SourceOffset(
                                                                20,
                                                            ),
                                                            length: SourceOffset(
                                                                1,
                                                            ),
                                                        },
                                                    },
                                                },
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    12,
                                                ),
                                                length: SourceOffset(
                                                    9,
                                                ),
                                            },
                                        },
                                        return_expr: Spanned {
                                            value: Let(
                                                Let {
                                                    name: Name(
                                                        "v8",
                                                    ),
                                                    var_expr: Spanned {
                                                        value: Binary(
                                                            Binary {
                                                                left: Spanned {
                                                                    value: Const(
                                                                        Integer(
                                                                            4,
                                                                        ),
                                                                    ),
                                                                    span: SourceSpan {
                                                                        offset: SourceOffset(
                                                                            23,
                                                                        ),
                                                                        length: SourceOffset(
                                                                            1,
                                                                        ),
                                                                    },
                                                                },
                                                                op: Add,
                                                                right: Spanned {
                                                                    value: Const(
                                                                        Integer(
                                                                            5,
                                                                        ),
                                                                    ),
                                                                    span: SourceSpan {
                                                                        offset: SourceOffset(
                                                                            27,
                                                                        ),
                                                                        length: SourceOffset(
                                                                            1,
                                                                        ),
                                                                    },
                                                                },
                                                            },
                                                        ),
                                                        span: SourceSpan {
                                                            offset: SourceOffset(
                                                                23,
                                                            ),
                                                            length: SourceOffset(
                                                                5,
                                                            ),
                                                        },
                                                    },
                                                    return_expr: Spanned {
                                                        value: FunctionCall(
                                                            FunctionCall {
                                                                atom: Spanned {
                                                                    value: Variable(
                                                                        Name(
                                                                            "v0",
                                                                        ),
                                                                    ),
                                                                    span: SourceSpan {
                                                                        offset: SourceOffset(
                                                                            0,
                                                                        ),
                                                                        length: SourceOffset(
                                                                            0,
                                                                        ),
                                                                    },
                                                                },
                                                                args: [
                                                                    Spanned {
                                                                        value: Variable(
                                                                            Name(
                                                                                "v5",
                                                                            ),
                                                                        ),
                                                                        span: SourceSpan {
                                                                            offset: SourceOffset(
                                                                                12,
                                                                            ),
                                                                            length: SourceOffset(
                                                                                9,
                                                                            ),
                                                                        },
                                                                    },
                                                                    Spanned {
                                                                        value: Variable(
                                                                            Name(
                                                                                "v8",
                                                                            ),
                                                                        ),
                                                                        span: SourceSpan {
                                                                            offset: SourceOffset(
                                                                                23,
                                                                            ),
                                                                            length: SourceOffset(
                                                                                5,
                                                                            ),
                                                                        },
                                                                    },
                                                                ],
                                                            },
                                                        ),
                                                        span: SourceSpan {
                                                            offset: SourceOffset(
                                                                0,
                                                            ),
                                                            length: SourceOffset(
                                                                29,
                                                            ),
                                                        },
                                                    },
                                                },
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    0,
                                                ),
                                                length: SourceOffset(
                                                    29,
                                                ),
                                            },
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        0,
                                    ),
                                    length: SourceOffset(
                                        29,
                                    ),
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            29,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                29,
            ),
        },
    },
)
