xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__unary.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"-1\")"
---
Ok(
    Spanned {
        value: Unary(
            Unary {
                op: Minus,
                atom: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: 1..2,
                },
            },
        ),
        span: 0..2,
    },
)
